# GOTTA_BIKE_gpx_to_stl

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  gps_stl.py  pyproject.toml  sample_climb.stl  terrain.py
examples/: Zwift_Road_to_Sky_in_Watopia.gpx  golden_colorado.gpx
